css/style.css
body {
    background-color: white;
	/* Use a system font, if none are available use an available sans-sarif   font */
	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
	margin: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}



section.board {
  display: grid;
  grid-template-rows: repeat(3, 10vmin);
  grid-template-columns: repeat(3, 10vmin);
  grid-gap: 0vmin;
}

div.sq {
  border: 3px solid black;
  font-size: 8vmin;
  text-align: center;
  vertical-align: middle;
}

.hidden {
  display: none;
}

